--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "shopware/core": "*"
+    "shopware/core": "~6.3"
   },
   "autoload": {
     "psr-4": {
@@ -38,5 +38,9 @@
       "de-DE": "https://www.visualsearch.at/index.php/support",
       "en-GB": "https://www.visualsearch.at/index.php/support"
     }
+  },
+  "suggest": {
+    "shopware/storefront": "Require '~6.3'. Enables special search by image feature.",
+    "shopware/administration": "Require '~6.3'. Allows you to to set up the plugin easily"
   }
 }
