--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     }
   ],
   "require": {
-    "shopware/core": "^6.3",
-    "shopware/storefront": "^6.3",
-    "shopware/administration": "^6.3"
+    "shopware/core": "*",
+    "shopware/administration": "*",
+    "shopware/storefront": "*"
   },
   "autoload": {
     "psr-4": {
